--- a/.env
+++ b/.env
@@ -25,6 +25,6 @@ APP_SECRET=96b3b438eeb6cf803588a13276c2cb8a
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://superRoot:superRoot@127.0.0.1:3306/hopHopHopLivraison
-#DATABASE_URL=mysql://superRoot:superRoot@127.0.0.1:3306/hopHopHopLivraison_dev
+#DATABASE_URL=mysql://superRoot:superRoot@127.0.0.1:3306/hopHopHopLivraison
+DATABASE_URL=mysql://superRoot:superRoot@127.0.0.1:3306/hopHopHopLivraison_dev
 ###< doctrine/doctrine-bundle ###
