--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,4 +1,5 @@
 framework:
+    error_controller: App\Controller\ErrorController::show
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     #http_method_override: true
