--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,4 +35,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: '^/admin', roles: ROLE_ADMIN }
+        - { path: '^/fr/appoint', roles: [ROLE_ADMIN, ROLE_USER] }
         # - { path: ^/profile, roles: ROLE_USER }
